--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,35 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Robin Sharma
+email: robinrythm123@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: Rabin_karp
+github_username:  Robin-07
+avatar:  "/assets/images/avatar.jpg"
+
+# Author
+author:
+  name:    "Robin Sharma"
+  avatar:  "/assets/images/avatar.jpg"
+  bio:     "Software Developer"
+  github:  Robin-07
 
 # Build settings
-theme: minima
+theme: jekyll-theme-chirpy
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-paginate
+  - jekyll-mentions
+  - jemoji
+  - jekyll-archives
 
 # Exclude from processing.
 # The following items will not be processed, by default.
