--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,11 @@ plugins:
   - jemoji
   - jekyll-archives
 
+# Web Analytics Settings
+analytics:
+  goatcounter:
+    id: robin
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
