--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://robin-07.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Rabin_karp
 github_username:  Robin-07
 avatar:  "/assets/images/avatar.jpg"
@@ -52,6 +52,9 @@ plugins:
 analytics:
   goatcounter:
     id: robin
+
+pageviews:
+  provider: goatcounter  
 
 # Exclude from processing.
 # The following items will not be processed, by default.
