--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 # Site settings
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://robinsharma.me" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Tabs settings
 collections:
