--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ collections:
 # Profile settings
 title: Robin Sharma
 tagline: Software Developer
-email: robinrythm123@gmail.com
+email: hello@robinsharma.me
 description: >- # this means to ignore newlines until "baseurl:"
   Full-stack Software Developer
 avatar:  "/assets/images/avatar.jpg"
@@ -43,7 +43,7 @@ github:
   username: Robin-07
 social:
   name: Robin
-  email: robinrythm123@gmail.com
+  email: hello@robinsharma.me
 
 # Theme settings
 theme_mode: light
@@ -65,9 +65,6 @@ plugins:
 analytics:
   goatcounter:
     id: robin
-
-pageviews:
-  provider: goatcounter  
 
 # Exclude from processing.
 # The following items will not be processed, by default.
